re PR middle-end/61654 (ICE in release_function_body, at cgraph.c:1699)

PR middle-end/61654
	* cgraphunit.c (expand_thunk): Call free_dominance_info.

	* g++.dg/opt/pr61654.C: New test.

From-SVN: r212293